--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build"
   },
+  "main": "dist/y-ui.cjs",
+  "module": "dist/y-ui.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "vue": "^3.5.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "sass": "^1.80.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "vite-plugin-dts": "^4.2.4"
   }
 }
