--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "y-ui",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@yangqianli/y-ui",
+  "private": false,
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "vite --host",
+    "build": " vite build"
   },
   "main": "dist/y-ui.cjs",
   "module": "dist/y-ui.js",
@@ -14,10 +14,12 @@
     "vue": "^3.5.10"
   },
   "devDependencies": {
+    "@types/node": "^22.7.6",
     "@vitejs/plugin-vue": "^5.1.4",
-    "sass": "^1.80.1",
+    "sass": "^1.80.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
-    "vite-plugin-dts": "^4.2.4"
+    "vite-plugin-dts": "^4.2.4",
+    "vue-tsc": "^2.1.6"
   }
 }
